--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My todo app that uses local storage to store all of the users todos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css",
+    "watch:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
