--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "odin-todo",
   "version": "1.0.0",
   "description": "My todo app that uses local storage to store all of the users todos",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css",
-    "watch:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css --watch"
+    "watch:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css --watch",
+    "build": "npm run build:css && webpack",
+    "start:server": "webpack serve --mode development --open",
+    "start": "npm run build && npm run start:server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.23.7",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.11",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.9.1",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
