--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch:css": "tailwindcss -i ./src/assets/input.css -o ./src/assets/styles.css --watch",
     "build": "npm run build:css && webpack",
     "start:server": "webpack serve --mode development --open",
-    "start": "npm run build && npm run start:server"
+    "start": "npm run build && npm run start:server",
+    "watch": "concurrently \"npm run watch:css\" \"npm run start:server\""
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.11",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.9.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
